tests/errors/error_array_bounds.nimmy
# Error: Array index out of bounds
let arr = [1, 2, 3]
echo arr[10]